<resources>
    <string name="app_name">safe</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="sign_up">sign up</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_signup">Sign in</string>
    <string name="Share">Share your location</string>
    <string name="register">Register</string>
    <string name="shareloc">Share Location</string>
    <string name="travel">Travelling services</string>
    <string name="emergency">Emergency</string>
    <string name="sharedesc">Share your current location to the saved contacts</string>
    <string name="traveldesc">Book a cab to the specified address</string>
    <string name="emerdesc">Send a message to the saved contacts or call the police</string>
    <string name="title_activity_catalog_contacts">CatalogContacts</string>
</resources>
